.provarCaches/00D6C0000000xA6UAI/objects/sked__Slot__c.object
<CustomObject>
    <fields>
        <fullName>sked__Customer_White_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer White Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Location_White_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location White Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of resources required for this slot</description>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Human</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Slot</label>
    <nameField>
        <label>Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>